--- a/app/views/print_job/show.html.erb
+++ b/app/views/print_job/show.html.erb
@@ -27,6 +27,10 @@
         </ul>
       </div>
     </div>
+    <div>
+      <label>Status: </label>
+      <%= form.text_field :status %>
+    </div>
     <%= form.submit 'Update' %>
   <% end %>
 </div>
