--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,25 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="user-header">
+    <div class="title">
+      <span>3D</span><span>Print</span>
+    </div>
+    <div class="logo"></div>
+    <div class="user-details">
+      <% if @user.nil? %>
+        <%= link_to 'Login', new_user_session_path %>
+      <% else %>
+        <%= @user.email %>
+        (<%= link_to 'Sign Out', '#' %>)
+      <% end %>
+    </div>
+  </div>
+
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 <%= yield %>
 
 </body>
 </html>
+
