--- a/app/views/print_request/index.html.erb
+++ b/app/views/print_request/index.html.erb
@@ -11,26 +11,5 @@
   </div>
 </div>
 
-<div class="current-print-jobs">
-  <table>
-    <thead>
-      <th>STL File Name</th>
-      <th>Time Submitted</th>
-      <th>Status</th>
-      <th>Time Remaining</th>
-      <th>Printer Name</th>
-    </thead>
-    <tbody>
-      <% @print_requests.each do |print_request| %>
-        <tr>
-          <td><%= print_request.stl_file_name %></td>
-          <td><%= print_request.created_at %></td>
-          <td><%= print_request.status %></td>
-          <td><%# TODO IMPLEMENT %></td>
-          <td><%= print_request.printer && print_request.printer.name %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
+<%= render 'print_jobs' %>
 
