--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,3 @@
-<h1>Dashboard</h1>
-
 <div class="upload-files section">
   <h2>Upload a File</h2>
 
@@ -12,7 +10,7 @@
   </div>
 </div>
 <div class="check-status section">
-  <h2>Status
+  <h2>Check Status
     <div id="refresh-status">Last Updated: <%= @last_updated_dt.to_s :in_standard_format %></div>
   </h2>
  
