--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,6 +11,10 @@
       <%= submit_tag 'Upload' %>
     <% end %>
   </div>
+
+  <div class="stl-preview">
+
+  </div>
 </div>
 <div class="check-status section">
   <h2>Check Status
