Corrected invalid namespace for slicer

--- a/app/views/print_request/_print_jobs.html.erb
+++ b/app/views/print_request/_print_jobs.html.erb
@@ -32,7 +32,7 @@
             <td><%= print_request.printer && print_request.printer.name %></td>
             <td><%= print_request.user.nil? ? 'No User!' : print_request.user.email %></td>
           <% end %>
-          <td><a class='stl_file_preview_link' href="#" stl_file_name="/stl_file/<%= print_request.stl_file_name %>">Preview</a>
+          <td><a class='stl_file_preview_link' href="#" stl_file_name="/stl_files/<%= print_request.stl_file_name %>">Preview</a>
         </tr>
       <% end %>
     </tbody>
