update stl previewer size and statistics

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -111,6 +111,13 @@ div.upload-files.section {
 
 }
 
+div.stl-preview {
+  width: 660px;
+  height: 500px;
+  margin: auto;
+  padding: 10px;
+}
+
 div.check-status.section {
   position: relative;
   overflow: auto;
