--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,9 +12,7 @@
     <% end %>
   </div>
 
-  <div class="stl-preview">
-
-  </div>
+  <div class="stl-preview"></div>
 </div>
 <div class="check-status section">
   <h2>Check Status
