Updated the styling in the stl previewer

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -113,9 +113,9 @@ div.upload-files.section {
 
 div.stl-preview {
   width: 660px;
-  height: 500px;
   margin: auto;
-  padding: 10px;
+  padding: 0 10px;
+  height: 0px;
 }
 
 div.check-status.section {
