Changed status message for error to be more clear

--- a/app/views/print_request/_status.html.erb
+++ b/app/views/print_request/_status.html.erb
@@ -1,5 +1,5 @@
 <select class='print-request-status' name='print_request[status]'>
-  <% ['Processing', 'Not Ready', 'Delivered', 'Started', 'Ready for Pickup', 'Error', 'Completed'].each do |s| %>
+  <% ['Processing', 'Not Ready', 'Delivered', 'Started', 'Ready for Pickup', 'Error Parsing STL File', 'Completed'].each do |s| %>
     <option value="<%= s %>" <%= 'selected' if status == s %>><%= s %></option>
   <% end %>
 </select>
