--- a/app/views/print_request/_printer.html.erb
+++ b/app/views/print_request/_printer.html.erb
@@ -1,7 +1,7 @@
 <select class='print-request-printer' name='print_request[printer_id]'>
   <% name = printer.nil? ? 'None' : printer.name  %>
   <option value="" <%= 'selected' if printer.nil? %>>None</option>
-  <% Printer.select( [:id, :name] ).each do |p| %>
+  <% @printers.each do |p| %>
     <option value="<%= p.id %>" <%= 'selected' if name == p.name %>><%= p.name %></option>
   <% end %>
 </select>
