--- a/app/views/print_request/_print_jobs.html.erb
+++ b/app/views/print_request/_print_jobs.html.erb
@@ -43,7 +43,7 @@
               <%= form_for "/print_request/next_state/#{print_request.id}" do |f| %>
                 <input type="button" 
                        class="next-state-btn" 
-                       style="<%= next_state_visible? print_request ? 'display: none' : '' %>" 
+                       style="<%= next_state_visible?( print_request ) ? 'display: none' : '' %>" 
                        value="<%= pretty_next_state_of print_request %>" />
               <% end %>
             </td>
