--- a/app/views/print_request/_print_jobs.html.erb
+++ b/app/views/print_request/_print_jobs.html.erb
@@ -40,7 +40,7 @@
           <td><a class='stl_file_preview_link' href="#" stl_file_name="/stl_files/<%= print_request.stl_file_name %>">Preview</a></td>
           <% if can? :manage, :all %>
             <td>
-              <%= form_for "/print_request/next_state/#{print_request.id}" do |f| %>
+              <%= form_tag "/print_request/next_state/#{print_request.id}" do |f| %>
                 <input type="submit" 
                        class="next-state-btn" 
                        style="<%= next_state_visible?( print_request ) ? 'display: none' : '' %>" 
