Edit home page content and add typeface

--- a/app/views/home/root.html.erb
+++ b/app/views/home/root.html.erb
@@ -1,8 +1,13 @@
-<h2>Home Page</h2>
-<h3>Welcome to the 3D Printer Spooling Service</h3>
+<h2>Welcome to FabServ</h2>
+<h3>3D Printing Service at the Georgia Tech Invention Studio</h3>
 
 <div class="summary">
-  This service is used in conjuction with the 3D printers in the Intention Studio at Georgia
-  Institute of Technology.
+    <p>FabServ is 3D printing at Georgia Tech.</p>
+
+    <p>Free to use; no 3D printer hacking needed. Just upload your 3D model in STL format.</p>
+
+    <img src="/images/FabServ_explanation.png" width="466" height="377" title="FabServ explanation: users send STL files and receive email notices and parts back" />
+
+    <p>FabServ is the first student-run online 3D printing service at any makerspace or university.</p>
 </div>
 
