--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Web3dPrinterSpooler</title>
+  <link href='http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
@@ -9,7 +10,7 @@
 <body>
   <div class="user-header">
     <div class="title">
-      <span>3D</span><span>Print</span>
+      <span>Fab</span><span>Serv</span>
     </div>
     <div class="logo"></div>
     <div class="user-details">
