Small style changes

--- a/app/views/print_request/_print_jobs.html.erb
+++ b/app/views/print_request/_print_jobs.html.erb
@@ -1,4 +1,4 @@
-<iframe id="blank_iframe" style="display: none"></iframe>
+<iframe name="blank_iframe" id="blank_iframe" style="display: none"></iframe>
 <div class="current-print-jobs">
   <table class="display dataTable">
     <thead>
